--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.springframework.social</groupId>
     <artifactId>spring-social-salesforce</artifactId>
-    <version>1.1.6</version>
+    <version>1.1.6-sandbox</version>
     <packaging>jar</packaging>
 
     <name>spring-social-salesforce</name>
