--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.springframework.social</groupId>
     <artifactId>spring-social-salesforce</artifactId>
-    <version>1.1.7.1</version>
+    <version>1.1.8</version>
     <packaging>jar</packaging>
 
     <name>spring-social-salesforce</name>
@@ -12,9 +12,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-social-core.version>1.1.0.M4</spring-social-core.version>
+        <spring-social-core.version>1.1.4.RELEASE</spring-social-core.version>
         <spring-social-test.version>1.0.2.RELEASE</spring-social-test.version>
-        <jackson.version>1.8.5</jackson.version>
+        <jackson.version>2.4.6</jackson.version>
     </properties>
 
     <dependencies>
@@ -23,18 +23,26 @@
             <artifactId>spring-social-core</artifactId>
             <version>${spring-social-core.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-test</artifactId>
-            <version>${spring-social-test.version}</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test-mvc</artifactId>
+            <version>1.0.0.M2</version>
             <scope>test</scope>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.social</groupId>-->
+            <!--<artifactId>spring-social-test</artifactId>-->
+            <!--<version>${spring-social-test.version}</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
