--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-social-core.version>1.1.4.RELEASE</spring-social-core.version>
-        <spring-social-test.version>1.0.2.RELEASE</spring-social-test.version>
-        <jackson.version>2.4.6</jackson.version>
+        <spring-test.version>1.0.0.M2</spring-test.version>
+        <jackson.version>2.7.2</jackson.version>
     </properties>
 
     <dependencies>
@@ -30,19 +30,21 @@
             <version>${jackson.version}</version>
         </dependency>
 
+
+        <!-- Test Dependencies: -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test-mvc</artifactId>
-            <version>1.0.0.M2</version>
+            <version>${spring-test.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.9</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -84,9 +86,8 @@
 
     <distributionManagement>
         <repository>
-            <id>central</id>
-            <name>eslbuild-releases</name>
-            <url>http://eslbuild.silanis.com:8080/artifactory/libs-release-local</url>
+            <id>silanis-releases</id>
+            <url>http://repository.silanis.com/content/repositories/libs-release-local/</url>
         </repository>
     </distributionManagement>
 
