--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,22 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>release_@{project.version}</tagNameFormat>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.9.4</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
@@ -87,8 +103,9 @@
     <distributionManagement>
         <repository>
             <id>silanis-releases</id>
-            <url>http://repository.silanis.com/content/repositories/libs-release-local/</url>
+            <url>http://repository.silanis.com/content/repositories/libs-release-local</url>
         </repository>
+        <downloadUrl>http://repository.silanis.com/content/groups/libs-release</downloadUrl>
     </distributionManagement>
 
 </project>
