--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
         <repository>
             <id>org.springframework.maven.release</id>
             <name>Spring Maven Release Repository</name>
-            <url>http://repo.spring.io/release/</url>
+            <url>http://maven.springframework.org/release</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -125,7 +125,7 @@
         <repository>
             <id>org.springframework.maven.milestone</id>
             <name>Spring Maven Milestone Repository</name>
-            <url>http://repo.spring.io/milestone/</url>
+            <url>http://maven.springframework.org/milestone</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -145,20 +145,6 @@
         <developerConnection>scm:git:git@github.com:OneSpan/spring-social-salesforce.git</developerConnection>
         <tag>spring-social-salesforce-@{project.version}</tag>
     </scm>
-
-
-<!--    <reporting>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
-<!--&lt;!&ndash;                <version>3.3.0</version>&ndash;&gt;-->
-<!--                <configuration>-->
-<!--                    <additionalparam>-Xdoclint:none</additionalparam>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-<!--    </reporting>-->
 
 
 </project>
