PB-110162 Update Salesforce API to v37

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,8 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test-mvc</artifactId>
             <version>${spring-test.version}</version>
-            <scope>test</scope>
+            <scope>system</scope>
+            <systemPath>${basedir}/libs/spring-test-mvc-1.0.0.M2.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -104,7 +105,7 @@
         <repository>
             <id>org.springframework.maven.release</id>
             <name>Spring Maven Release Repository</name>
-            <url>https://repo.spring.io/ui/native/release/</url>
+            <url>http://maven.springframework.org/release</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -116,7 +117,7 @@
         <repository>
             <id>org.springframework.maven.milestone</id>
             <name>Spring Maven Milestone Repository</name>
-            <url>https://repo.spring.io/ui/native/milestone/</url>
+            <url>http://maven.springframework.org/milestone</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
